--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -14,6 +14,14 @@
   margin-top: 48px;
 }
 
+.popup__button_disabled {
+  background: transparent;
+  color: black;
+  opacity: 0.2;
+  border: 1px solid black;
+  pointer-events: none;
+}
+
 .popup__button:hover {
   background: rgba(0, 0, 0, 0.8);
   cursor: pointer;
