--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -3,6 +3,7 @@
 @import url('./__close/popup__close.css');
 @import url('./__title/popup__title.css');
 @import url('./__form/popup__form.css');
+@import url('./__error/popup__error.css');
 @import url('./__input/popup__input.css');
 @import url('./__button/popup__button.css');
 @import url('./__caption/popup__caption.css');
@@ -20,4 +21,9 @@
   bottom: 0;
   right: 0;
   z-index: 10;
+  cursor: pointer;
+}
+
+.popup_type_image {
+  background-color: rgba(0, 0, 0, .9);
 }
