--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,12 +1,13 @@
 .profile__image {
+  position: relative;
   width: 120px;
   height: 120px;
+  margin: 0 29px 0 0;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-  background-size: cover;
   background-position: center;
-  margin: 0 29px 0 0;
+  background-size: cover;
 }
 
 @media screen and (max-width: 740px) {
@@ -19,4 +20,19 @@
   .profile__image {
     margin-right: 0;
   }
+}
+
+.profile__image:hover::before {
+  content: "";
+  display: block;
+  border-radius: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-image: url(../../../images/edit-icon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 30%;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+  inline-size: 100%;
+  block-size: 100%;
 }
